src/objects/CRM_WF_Niveles_De_Servicio__c.object
<CustomObject>
    <fields>
        <fullName>CRM_Dias_Habiles_del_Proceso__c</fullName>
        <formula>(5 * ( FLOOR( ( DATEVALUE (CRM_WF_Fecha_De_Terminacion__c) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE (CRM_WF_Fecha_De_Terminacion__c) - DATE( 1900, 1, 8), 7 ) ) ) 
- 
(5 * ( FLOOR( ( DATEVALUE (CRM_WF_Fecha_De_Envio__c) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE (CRM_WF_Fecha_De_Envio__c ) - DATE( 1900, 1, 8), 7 ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Días Hábiles del Proceso</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Creado_Por__c</fullName>
        <label>Creado por</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Dias_Hab_Transcurridos_Del_Paso__c</fullName>
        <formula>CASE (MOD ( DATEVALUE ( CRM_WF_Fecha_Fin_Paso__c ) - DATE ( 1985,6,24), 7 ), 

0, CASE ( MOD ( DATEVALUE ( CRM_WF_Fecha_Fin_Paso__c ) - DATEVALUE ( CRM_WF_Fecha_Inicio_Paso__c ) , 7 ), 1,2,2,3,3,4,4,5,5,5,6,5,1 ), 
1, CASE ( MOD ( DATEVALUE ( CRM_WF_Fecha_Fin_Paso__c ) - DATEVALUE ( CRM_WF_Fecha_Inicio_Paso__c ) , 7 ), 1,2,2,3,3,4,4,4,5,4,6,5,1 ), 
2, CASE ( MOD ( DATEVALUE ( CRM_WF_Fecha_Fin_Paso__c ) - DATEVALUE ( CRM_WF_Fecha_Inicio_Paso__c ) , 7 ), 1,2,2,3,3,3,4,3,5,4,6,5,1 ), 
3, CASE ( MOD ( DATEVALUE ( CRM_WF_Fecha_Fin_Paso__c ) - DATEVALUE ( CRM_WF_Fecha_Inicio_Paso__c ) , 7 ), 1,2,2,2,3,2,4,3,5,4,6,5,1 ), 
4, CASE ( MOD ( DATEVALUE ( CRM_WF_Fecha_Fin_Paso__c ) - DATEVALUE ( CRM_WF_Fecha_Inicio_Paso__c ) , 7 ), 1,1,2,1,3,2,4,3,5,4,6,5,1 ), 
5, CASE ( MOD ( DATEVALUE ( CRM_WF_Fecha_Fin_Paso__c ) - DATEVALUE ( CRM_WF_Fecha_Inicio_Paso__c ) , 7 ), 1,0,2,1,3,2,4,3,5,4,6,5,0 ), 
6, CASE ( MOD ( DATEVALUE ( CRM_WF_Fecha_Fin_Paso__c ) - DATEVALUE ( CRM_WF_Fecha_Inicio_Paso__c ) , 7 ), 1,1,2,2,3,3,4,4,5,5,6,5,0 ), 999 )
 
+ 

( FLOOR ( ( CRM_WF_Fecha_Fin_Paso__c - CRM_WF_Fecha_Inicio_Paso__c ) / 7 ) * 5 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Días hábiles transcurridos del paso</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Dias_Habiles_Paso__c</fullName>
        <formula>(5 * ( FLOOR( ( DATEVALUE (CRM_WF_Fecha_Fin_Paso__c)  - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE (CRM_WF_Fecha_Fin_Paso__c) - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( (  DATEVALUE (CRM_WF_Fecha_Inicio_Paso__c )  - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(  DATEVALUE (CRM_WF_Fecha_Inicio_Paso__c ) - DATE( 1900, 1, 8), 7 ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Días Hábiles del Paso</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Dias_Transcurridos_Aprobacion__c</fullName>
        <label>Días transcurridos</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Dias_Transcurridos_Paso__c</fullName>
        <label>Días transcurridos del paso</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Edad_Del_Paso_Dias_Habiles__c</fullName>
        <formula>IF(CRM_WF_Estado_Del_Paso__c = &quot;Pendiente&quot;, 

(5 * ( FLOOR( ( Today() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Today() - DATE( 1900, 1, 8), 7 ) ) ) 
- 
(5 * ( FLOOR( ( DATEVALUE (CRM_WF_Fecha_Inicio_Paso__c ) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE (CRM_WF_Fecha_Inicio_Paso__c ) - DATE( 1900, 1, 8), 7 ) ) ), 

(5 * ( FLOOR( ( DATEVALUE (CRM_WF_Fecha_Fin_Paso__c) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE (CRM_WF_Fecha_Fin_Paso__c) - DATE( 1900, 1, 8), 7 ) ) ) 
- 
(5 * ( FLOOR( ( DATEVALUE (CRM_WF_Fecha_Inicio_Paso__c ) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE (CRM_WF_Fecha_Inicio_Paso__c ) - DATE( 1900, 1, 8), 7 ) ) )

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edad del Paso en Días Hábiles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Edad_del_Proceso_Dias_Habiles__c</fullName>
        <formula>IF(CRM_WF_Estado_De_La_Aprobacion__c = &quot;Pendiente&quot;, 

(5 * ( FLOOR( ( Today() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Today() - DATE( 1900, 1, 8), 7 ) ) ) 
- 
(5 * ( FLOOR( ( DATEVALUE (CRM_WF_Fecha_De_Envio__c ) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE (CRM_WF_Fecha_De_Envio__c) - DATE( 1900, 1, 8), 7 ) ) ), 

(5 * ( FLOOR( ( DATEVALUE (CRM_WF_Fecha_De_Terminacion__c) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE (CRM_WF_Fecha_De_Terminacion__c) - DATE( 1900, 1, 8), 7 ) ) ) 
- 
(5 * ( FLOOR( ( DATEVALUE (CRM_WF_Fecha_De_Envio__c) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE (CRM_WF_Fecha_De_Envio__c) - DATE( 1900, 1, 8), 7 ) ) )
 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edad del Proceso en Días Hábiles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Enviado_Por__c</fullName>
        <label>Enviado por</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Estado_De_La_Aprobacion__c</fullName>
        <label>Estado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Estado_Del_Paso__c</fullName>
        <label>Estado del paso</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Fecha_De_Envio__c</fullName>
        <label>Fecha de envío</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Fecha_De_Terminacion__c</fullName>
        <label>Fecha de terminación</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Fecha_Fin_Paso__c</fullName>
        <label>Fecha Fin del paso</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Fecha_Inicio_Paso__c</fullName>
        <label>Fecha Inicio del paso</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Horas_Transcurridas_Aprobacion__c</fullName>
        <label>Horas transcurridas</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Horas_Transcurridas_Paso__c</fullName>
        <label>Horas transcurridas del paso</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Id_De_La_Instancia__c</fullName>
        <label>Id de la Instancia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Nombre_Del_Paso__c</fullName>
        <label>Nombre del paso</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Nombre_Del_Registro__c</fullName>
        <label>Nombre del registro</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Nombre_Paso_Pendiente__c</fullName>
        <label>Nombre del paso pendiente</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Nombre_Proceso_De_Aprobacion__c</fullName>
        <label>Nombre del proceso de aprobación</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Registro_De_La_Campana__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Registro de la Campaña</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Niveles de Servicio</relationshipLabel>
        <relationshipName>Niveles_de_Servicio</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Registro_Enviado_Por__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Registro enviado por</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Niveles_de_Servicio</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Tipo_De_Objeto__c</fullName>
        <label>Tipo de Objeto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Ultimo_Actor_Paso__c</fullName>
        <label>Ültimo actor del paso</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Niveles de Servicio</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CRM_WF_Estado_Del_Paso__c</columns>
        <columns>CRM_WF_Fecha_Inicio_Paso__c</columns>
        <columns>CRM_WF_Fecha_Fin_Paso__c</columns>
        <columns>CRM_WF_Dias_Habiles_Paso__c</columns>
        <columns>CRM_WF_Nombre_Del_Paso__c</columns>
        <columns>CRM_WF_Tipo_De_Objeto__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>NV-{00000000}</displayFormat>
        <label>Folio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Niveles de Servicio</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>